feat: 범용가이드 원문 API
